tests/__snapshots__/validation-rootPath-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'rootPath' option must be a string.

  1 | {
  2 |   "rootPath": true,
    |               ~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.t*st.*"
  5 |   ]

      at ./tstyche.config.json:2:15

